tests/invalid/redeclaration_of_symbol.ar
fn main() { }

fn redecl_var(n: u64) {
    const n = n;
}

//! tests/invalid/redeclaration_of_symbol.ar:4:11: error: redeclaration of symbol `n`
